--- a/environment.yaml
+++ b/environment.yaml
@@ -26,6 +26,7 @@ dependencies:
     - transformers==4.3.1
     - rdkit==2022.3.3
     - cairosvg==2.7.1
+    - matplotlib==3.5.3
     - -e git+https://github.com/CompVis/taming-transformers.git@master#egg=taming-transformers
     - -e git+https://github.com/openai/CLIP.git@main#egg=clip
     - -e .
